style: alert spacing fixed

--- a/src/app/view/style.scss
+++ b/src/app/view/style.scss
@@ -97,7 +97,9 @@
         line-height: 1rem;
         font-family: "Google Sans", "Helvetica Neue", sans-serif;
         letter-spacing: .1px;
+        margin: 0 auto;
         margin-top: 0.2rem;
+        width: fit-content;
 
         a {
             text-decoration: underline;
